Corrigido erro em texto de slide.

--- a/notebooks/23.features_multi_escala.ipynb
+++ b/notebooks/23.features_multi_escala.ipynb
@@ -550,7 +550,7 @@
     "## Orientação do Ponto IV\n",
     "\n",
     "- Picos no histograma de orientação irão determinar a orientação do ponto SIFT\n",
-    "- Caso picos menores no histograma (picos menores que o maior de todos, mas que sejam pelo menos 80% do valor do máximo):\n",
+    "- Caso existam picos menores no histograma (picos menores que o maior de todos, mas que sejam pelo menos 80% do valor do máximo):\n",
     "    - Uma cópia do ponto é criada\n",
     "    - Esta cópia possui mesmas coordenadas e escala, mas orientação igual à dada pelo pico secundário no histograma"
    ]
