Arquivos da aula de fluxo óptico adicionados.

--- a/notebooks/22.features em imagens.ipynb
+++ b/notebooks/22.features em imagens.ipynb
@@ -511,18 +511,18 @@
    "source": [
     "## Referências:\n",
     "\n",
-    "[1] Richard Szeliski. 2010. Computer Vision: Algorithms and Applications (1st. ed.). Springer-Verlag, Berlin, Heidelberg.\n",
+    "[1] R. Szeliski. 2010. Computer Vision: Algorithms and Applications (1st. ed.). Springer-Verlag, Berlin, Heidelberg.\n",
     "\n",
-    "[2] Emanuele Trucco and Alessandro Verri. 1998. Introductory Techniques for 3-D Computer Vision. Prentice Hall PTR, USA.\n",
+    "[2] E. Trucco and A. Verri. 1998. Introductory Techniques for 3-D Computer Vision. Prentice Hall PTR, USA.\n",
     "\n",
-    "[3] Adrian Kaehler and Gary Bradski. 2014. Learning OpenCV, 2nd Edition. O'Reilly Media, Inc.\n",
+    "[3] A. Kaehler and G. Bradski. 2014. Learning OpenCV, 2nd Edition. O'Reilly Media, Inc.\n",
     "\n",
     "[4] M. Brown, R. Szeliski and S. Winder. 2005. Multi-Image Matching using Multi-Scale Oriented Patches. \n",
     "International Conference on Computer Vision and Pattern Recognition (CVPR 2005). pages 510-517.\n",
     "\n",
     "[5] C. Harris and M. Stephens. 1988. A Combined Corner and Edge Detector. Alvey Vision Conference. Vol. 15.\n",
     "\n",
-    "[6] J. Shi and C. Tomasi. 1994. Good features to track. International Conference on Computer Vision and Pattern Recognition (CVPR 1994). pages 593–600."
+    "[6] J. Shi and C. Tomasi. 1994. Good features to track. International Conference on Computer Vision and Pattern Recognition (CVPR 1994). IEEE."
    ]
   }
  ],
