--- a/notebooks/23.features_multi_escala.ipynb
+++ b/notebooks/23.features_multi_escala.ipynb
@@ -638,9 +638,9 @@
    "source": [
     "## Referências:\n",
     "\n",
-    "[1] Richard Szeliski. 2010. Computer Vision: Algorithms and Applications (1st. ed.). Springer.\n",
+    "[1] R. Szeliski. 2010. Computer Vision: Algorithms and Applications (1st. ed.). Springer.\n",
     "\n",
-    "[2] Adrian Kaehler and Gary Bradski. 2014. Learning OpenCV, 2nd Edition. O'Reilly Media, Inc.\n",
+    "[2] A. Kaehler and G. Bradski. 2014. Learning OpenCV, 2nd Edition. O'Reilly Media, Inc.\n",
     "\n",
     "[3] D. Lowe. 2004. Distinctive Image Features from Scale-Invariant Keypoints. International Journal of Computer Vision. Springer.\n",
     "\n",
@@ -654,6 +654,11 @@
     "\n",
     "[8] OpenCV: Image Pyramids Tutorial. Disponível em https://docs.opencv.org/4.x/dc/dff/tutorial_py_pyramids.html. Acessado 04/11/2023."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
