Corrigida imagem dos sistemas de coordenadas; adicionada imagem de remoção da distorção

--- a/notebooks/25_projecao_perspectiva.ipynb
+++ b/notebooks/25_projecao_perspectiva.ipynb
@@ -577,6 +577,26 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distorção: Visualização\n",
+    "\n",
+    "Padrão de xadrez detectado em imagem com distorção e em imagem com distorção removida (*undistorted*).<br>\n",
+    "Note a ocorrência de regiões com valores de pixel 0 após remoção da distorção.\n",
+    "\n",
+    "<table border=\"0\">\n",
+    "<tr>\n",
+    "<td><img src=\"25_projecao_perspectiva/original_image.jpg\" style=\"margin:auto; width: 400px;\"/></td>\n",
+    "<td><img src=\"25_projecao_perspectiva/undistorted_image.jpg\" style=\"margin:auto; width: 400px;\"/></td>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td colspan=\"2\">Imagens da internet </td>\n",
+    "</tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
