Slide com conteúdo duplicado removido.

--- a/notebooks/26_calibracao_camera.ipynb
+++ b/notebooks/26_calibracao_camera.ipynb
@@ -473,15 +473,7 @@
     "- Arrays dos pontos no objeto (arrays de array Numpy)\n",
     "- Arrays dos pontos na imagem (arrays de array Numpy)\n",
     "    - Estes dois arrays devem corresponder: numa mesma posição $k$, deve constar o 3D/2D de um mesmo ponto\n",
-    "- Tamanho da imagem (largura $\\times$ altura)\n",
-    "\n",
-    "Retorno:\n",
-    "\n",
-    "- A soma dos erros de reprojeção\n",
-    "- A matriz de parâmetros intrínsecos\n",
-    "- Os coeficientes de distorção em um vetor\n",
-    "- A orientação do plano no sistema de coordenadas da câmera (extrínsecos de rotação na representação de Rodrigues)\n",
-    "- A posição do plano no sistema de coordenadas da câmera (extrínsecos de translação)\n"
+    "- Tamanho da imagem (largura $\\times$ altura)"
    ]
   },
   {
