Adicionada equação dos extrínsecos no slide.

--- a/notebooks/27_visao_estereo.ipynb
+++ b/notebooks/27_visao_estereo.ipynb
@@ -328,7 +328,9 @@
     "- **Plano epipolar**: plano que contém os epipolos e um ponto no mundo\n",
     "    - Plano que contém $\\mathbf{O}_l$, $\\mathbf{O}_r$ e $\\mathbf{P}$\n",
     "- **Linha epipolar**: linha na imagem entre o epipolo e a projeção de um ponto no mundo (linha do plano epipolar que \"corta\" a imagem)\n",
-    "    - Linhas $\\overrightarrow{\\mathbf{p}_l\\mathbf{e}_l}$ e $\\overrightarrow{\\mathbf{p}_r\\mathbf{e}_r}$"
+    "    - Linhas $\\overrightarrow{\\mathbf{p}_l\\mathbf{e}_l}$ e $\\overrightarrow{\\mathbf{p}_r\\mathbf{e}_r}$\n",
+    "- É assumido que $\\mathbf{P}_r = \\mathbf{R}(\\mathbf{P}_l - \\mathbf{t})$, com $\\mathbf{R}$ e $\\mathbf{t}$\n",
+    "  sendo os parâmetros extrínsecos entre as câmeras"
    ]
   },
   {
